force-app/main/default/objects/PS_ASU_SP_FA_BAL_V__x.object
<CustomObject>
    <fields>
        <fullName>BALANCE_AMT__c</fullName>
        <description>Data sourced from PS_SSF_SS_SUM_CHRG.ITEM_AMT</description>
        <externalDeveloperName>BALANCE_AMT</externalDeveloperName>
        <label>Total Account Balance</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DUE_AMT__c</fullName>
        <description>Data sourced from PS_SSF_DUE_CHRG_VW.DUE_AMT</description>
        <externalDeveloperName>DUE_AMT</externalDeveloperName>
        <label>Outstanding Account Balance</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMPLID__c</fullName>
        <description>Data sourced from PS_SSF_SS_SUM_CHRG.COMMON_ID</description>
        <externalDeveloperName>EMPLID</externalDeveloperName>
        <label>Contact</label>
        <length>10</length>
        <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Finance Account Balance (external)</relationshipLabel>
        <relationshipName>Finance_Account_Balance_external</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <description>Data source script can be found here: https://docs.google.com/document/d/1xjbfIDYJEv0jyq-nrFDse3ZFwuRmqxBWupR7MzH6VAc/edit</description>
    <externalDataSource>asu_ps_lightning</externalDataSource>
    <externalName>PS_ASU_SP_FA_BAL_V</externalName>
    <label>Finance Account Balance (external)</label>
    <pluralLabel>Finance Account Balance (external)</pluralLabel>
</CustomObject>